<resources>
    <string name="app_name">Lab3</string>
    <string name="tikal">Tikal</string>
    <string name="algo">algo</string>
    <string name="nada">NADA</string>
    <string name="favorito">Favorito</string>
    <string name="livingston">Livingston</string>
    <string name="todo">TODO</string>
    <string name="tikal_es_una_antigua_ciudadela_maya_en_los_bosques_tropicales_del_norte_de_guatemala_se_cree_que_data_del_siglo_i_d_c_tikal_floreci_entre_los_a_os_200_y_850_d_c_y_luego_fue_abandonada_sus_ruinas_ic_nicas_de_templos_y_palacios_incluyen_la_gigante_pir_mide_ceremonial_mundo_perdido_y_el_templo_del_gran_jaguar_a_70_metros_el_templo_iv_es_la_estructura_precolombina_m_s_alta_de_am_rica_y_tiene_vista_panor_mica">Tikal es una antigua ciudadela maya en los bosques tropicales del norte de Guatemala. Se cree que data del siglo I d. C. Tikal floreció entre los años 200 y 850 d. C. y luego fue abandonada. Sus ruinas icónicas de templos y palacios incluyen la gigante pirámide ceremonial Mundo Perdido y el Templo del Gran Jaguar. A 70 metros, el Templo IV es la estructura precolombina más alta de América y tiene vista panorámica.</string>
    <string name="flores">Flores</string>
    <string name="escribe_aqui">escribe aqui</string>
    <string name="nombres">Nombre</string>
    <string name="antigua">Antigua</string>
    <string name="foto_del_volcan_de_agua">Foto del volcan de Agua</string>
    <string name="esta_es_la_famosa_antigua_guatemala">Esta es la famosa Antigua Guatemala</string>
    <string name="la_ciudad_de_santiago_de_los_caballeros_de_guatemala_cuyo_nombre_oficial_e_hist_rico_es_muy_noble_y_muy_leal_ciudad_de_santiago_de_los_caballeros_de_guatemala_y_popularmente_nombrada_en_la_actualidad_como_antigua_guatemala_es_cabecera_del_municipio_hom_nimo_y_del_departamento_de_sacatep_quez_guatemala_se_ubica_a_aproximadamente_25_kil_metros_al_oeste_de_la_capital_de_la_rep_blica_de_guatemala_y_a_una_altitud_de_1470_msnm_actualmente_la_ciudad_se_ubica_dentro_de_las_20_ciudades_m_s_importantes_de_guatemala_durante_la_poca_colonial_era_conocida_como_santiago_de_los_caballeros_de_guatemala_y_fue_la_capital_de_la_capitan_a_general_de_guatemala_entre_1541_y_1776_a_o_en_que_la_capital_fue_trasladada_a_la_ciudad_de_nueva_guatemala_de_la_asunci_n_despu_s_de_que_los_terremotos_de_santa_marta_arruinaran_la_ciudad_por_tercera_ocasi_n_en_el_mismo_siglo3_y_las_autoridades_civiles_utilizaran_eso_como_excusa_para_debilitar_a_las_autoridades_eclesi_sticas_siguiendo_las_recomendaciones_de_las_reformas_borb_nicas_emprendidas_por_la_corona_espa_ola_en_la_segunda_mitad_del_siglo_xviii_4_obligando_a_las_rdenes_regulares_a_trasladarse_de_sus_majestuosos_conventos_a_fr_giles_estructuras_temporales_en_la_nueva_ciudad_5_a_partir_del_traslado_la_ciudad_pas_a_llamarse_arruinada_guatemala_santiago_de_guatemala_antiguo_y_la_antigua_ciudad_fue_abandonada_por_todas_las_autoridades_reales_y_municipales_y_en_1784_por_las_dos_ltimas_parroquias_candelaria_y_nuestra_se_ora_de_los_remedios_qued_ndose_tambi_n_sin_autoridades_eclesi_sticas_6_pocos_a_os_despu_s_el_arzobispo_cayetano_francos_y_monroy_autoriz_el_funcionamiento_de_tres_parroquias_interinas_que_llevaron_el_nombre_de_sus_antecesoras_san_sebasti_n_candelaria_y_los_remedios_en_donde_se_guard_la_mayor_cantidad_de_obras_de_arte_religioso_que_permaneci_en_la_antigua_guatemala">La ciudad de Santiago de los Caballeros de Guatemala, cuyo nombre oficial e histórico es Muy Noble y Muy Leal Ciudad de Santiago de los Caballeros de Guatemala y popularmente nombrada en la actualidad como Antigua Guatemala, es cabecera del municipio homónimo y del departamento de Sacatepéquez, Guatemala; se ubica a aproximadamente 25 kilómetros al oeste de la capital de la República de Guatemala, y a una altitud de 1470 msnm. Actualmente la ciudad se ubica dentro de las 20 ciudades más importantes de Guatemala. Durante la época colonial era conocida como «Santiago de los Caballeros de Guatemala», y fue la capital de la Capitanía General de Guatemala, entre 1541 y 1776, año en que la capital fue trasladada a la ciudad de Nueva Guatemala de la Asunción después de que los terremotos de Santa Marta arruinaran la ciudad por tercera ocasión en el mismo siglo3​ y las autoridades civiles utilizaran eso como excusa para debilitar a las autoridades eclesiásticas —siguiendo las recomendaciones de las Reformas Borbónicas emprendidas por la corona española en la segunda mitad del siglo xviii—4​ obligando a las órdenes regulares a trasladarse de sus majestuosos conventos a frágiles estructuras temporales en la nueva ciudad.5​ A partir del traslado la ciudad pasó a llamarse «arruinada Guatemala», «Santiago de Guatemala antiguo» y la «antigua ciudad». Fue abandonada por todas las autoridades reales y municipales, y en 1784 por las dos últimas parroquias: «Candelaria» y «Nuestra Señora de los Remedios», quedándose también sin autoridades eclesiásticas.6​ Pocos años después el arzobispo Cayetano Francos y Monroy autorizó el funcionamiento de tres parroquias interinas que llevaron el nombre de sus antecesoras: «San Sebastián», «Candelaria» y «Los Remedios», en donde se guardó la mayor cantidad de obras de arte religioso que permaneció en la antigua Guatemala.</string>
    <string name="comente_aqui">Comente aqui</string>
    <string name="comentario">Comentario</string>
    <string name="he_aqui_la_bella_anitgua_guatemla">He aqui la bella Anitgua Guatemla</string>
</resources>
